--- a/clean.ipynb
+++ b/clean.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -83,6 +83,8 @@
       "5    21    2023-03-18  Skilled workers (Quebec)\n",
       "6    20    2023-04-18  Skilled workers (Quebec)\n",
       "7    21    2023-05-02  Skilled workers (Quebec)\n",
+      "8    21    2023-05-02  Skilled workers (Quebec)\n",
+      "9    21    2023-05-10  Skilled workers (Quebec)\n",
       "   time date_recorded               category\n",
       "0    67    2022-10-18  Quebec Business Class\n",
       "1    65    2022-11-18  Quebec Business Class\n",
@@ -92,6 +94,8 @@
       "5    65    2023-03-18  Quebec Business Class\n",
       "6    67    2023-04-18  Quebec Business Class\n",
       "7    68    2023-05-02  Quebec Business Class\n",
+      "8    68    2023-05-02  Quebec Business Class\n",
+      "9    68    2023-05-10  Quebec Business Class\n",
       "   time date_recorded                   category\n",
       "0    22    2022-10-18  Skilled workers (Federal)\n",
       "1    24    2022-11-18  Skilled workers (Federal)\n",
@@ -101,6 +105,8 @@
       "5    22    2023-03-18  Skilled workers (Federal)\n",
       "6    27    2023-04-18  Skilled workers (Federal)\n",
       "7    26    2023-05-02  Skilled workers (Federal)\n",
+      "8    26    2023-05-02  Skilled workers (Federal)\n",
+      "9    26    2023-05-10  Skilled workers (Federal)\n",
       "   time date_recorded                      category\n",
       "0     8    2022-10-18  Atlantic Immigration Program\n",
       "1     6    2022-11-18  Atlantic Immigration Program\n",
@@ -110,6 +116,8 @@
       "5     4    2023-03-18  Atlantic Immigration Program\n",
       "6     4    2023-04-18  Atlantic Immigration Program\n",
       "7     5    2023-05-02  Atlantic Immigration Program\n",
+      "8     5    2023-05-02  Atlantic Immigration Program\n",
+      "9     5    2023-05-10  Atlantic Immigration Program\n",
       "   time date_recorded                         category\n",
       "0    48    2022-10-18  Self-employed persons (Federal)\n",
       "1    60    2022-11-18  Self-employed persons (Federal)\n",
@@ -119,6 +127,8 @@
       "5    58    2023-03-18  Self-employed persons (Federal)\n",
       "6    44    2023-04-18  Self-employed persons (Federal)\n",
       "7    46    2023-05-02  Self-employed persons (Federal)\n",
+      "8    46    2023-05-02  Self-employed persons (Federal)\n",
+      "9    46    2023-05-10  Self-employed persons (Federal)\n",
       "   time date_recorded       category\n",
       "0    30    2022-10-18  Start-up visa\n",
       "1    41    2022-11-18  Start-up visa\n",
@@ -128,6 +138,8 @@
       "5    34    2023-03-18  Start-up visa\n",
       "6    35    2023-04-18  Start-up visa\n",
       "7    36    2023-05-02  Start-up visa\n",
+      "8    36    2023-05-02  Start-up visa\n",
+      "9    35    2023-05-10  Start-up visa\n",
       "   time date_recorded                  category\n",
       "0    39    2022-10-18  Skilled trades (Federal)\n",
       "1    38    2022-11-18  Skilled trades (Federal)\n",
@@ -143,7 +155,9 @@
       "4     4    2023-02-18  Canadian Experience Class\n",
       "5     5    2023-03-18  Canadian Experience Class\n",
       "6     5    2023-04-18  Canadian Experience Class\n",
-      "7     4    2023-05-02  Canadian Experience Class\n"
+      "7     4    2023-05-02  Canadian Experience Class\n",
+      "8     4    2023-05-02  Canadian Experience Class\n",
+      "9     4    2023-05-10  Canadian Experience Class\n"
      ]
     }
    ],
@@ -162,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -339,6 +353,32 @@
        "      <td>NaN</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>21</td>\n",
+       "      <td>2023-05-02</td>\n",
+       "      <td>21</td>\n",
+       "      <td>68</td>\n",
+       "      <td>26</td>\n",
+       "      <td>5</td>\n",
+       "      <td>46</td>\n",
+       "      <td>36</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>21</td>\n",
+       "      <td>2023-05-10</td>\n",
+       "      <td>21</td>\n",
+       "      <td>68</td>\n",
+       "      <td>26</td>\n",
+       "      <td>5</td>\n",
+       "      <td>46</td>\n",
+       "      <td>35</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -353,6 +393,8 @@
        "5                        21    2023-03-18          21           65   \n",
        "6                        20    2023-04-18          20           67   \n",
        "7                        21    2023-05-02          21           68   \n",
+       "8                        21    2023-05-02          21           68   \n",
+       "9                        21    2023-05-10          21           68   \n",
        "\n",
        "   skilled_fed  atlantic  self_employed  startup  trades  can_exp  \n",
        "0           22         8             48       30    39.0        4  \n",
@@ -362,10 +404,12 @@
        "4           23         4             24       45    40.0        4  \n",
        "5           22         4             58       34    48.0        5  \n",
        "6           27         4             44       35     NaN        5  \n",
-       "7           26         5             46       36     NaN        4  "
+       "7           26         5             46       36     NaN        4  \n",
+       "8           26         5             46       36     NaN        4  \n",
+       "9           26         5             46       35     NaN        4  "
       ]
      },
-     "execution_count": 372,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
