--- a/clean.ipynb
+++ b/clean.ipynb
@@ -74,72 +74,84 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   time date_recorded                  category\n",
-      "0    22    2022-10-18  Skilled workers (Quebec)\n",
-      "1    23    2022-11-18  Skilled workers (Quebec)\n",
-      "2    22    2022-12-18  Skilled workers (Quebec)\n",
-      "3    21    2023-01-18  Skilled workers (Quebec)\n",
-      "4    22    2023-02-18  Skilled workers (Quebec)\n",
-      "5    21    2023-03-18  Skilled workers (Quebec)\n",
-      "6    20    2023-04-18  Skilled workers (Quebec)\n",
-      "7    21    2023-05-02  Skilled workers (Quebec)\n",
-      "8    21    2023-05-02  Skilled workers (Quebec)\n",
-      "9    21    2023-05-10  Skilled workers (Quebec)\n",
-      "   time date_recorded               category\n",
-      "0    67    2022-10-18  Quebec Business Class\n",
-      "1    65    2022-11-18  Quebec Business Class\n",
-      "2    68    2022-12-18  Quebec Business Class\n",
-      "3    64    2023-01-18  Quebec Business Class\n",
-      "4    64    2023-02-18  Quebec Business Class\n",
-      "5    65    2023-03-18  Quebec Business Class\n",
-      "6    67    2023-04-18  Quebec Business Class\n",
-      "7    68    2023-05-02  Quebec Business Class\n",
-      "8    68    2023-05-02  Quebec Business Class\n",
-      "9    68    2023-05-10  Quebec Business Class\n",
-      "   time date_recorded                   category\n",
-      "0    22    2022-10-18  Skilled workers (Federal)\n",
-      "1    24    2022-11-18  Skilled workers (Federal)\n",
-      "2    25    2022-12-18  Skilled workers (Federal)\n",
-      "3    24    2023-01-18  Skilled workers (Federal)\n",
-      "4    23    2023-02-18  Skilled workers (Federal)\n",
-      "5    22    2023-03-18  Skilled workers (Federal)\n",
-      "6    27    2023-04-18  Skilled workers (Federal)\n",
-      "7    26    2023-05-02  Skilled workers (Federal)\n",
-      "8    26    2023-05-02  Skilled workers (Federal)\n",
-      "9    26    2023-05-10  Skilled workers (Federal)\n",
-      "   time date_recorded                      category\n",
-      "0     8    2022-10-18  Atlantic Immigration Program\n",
-      "1     6    2022-11-18  Atlantic Immigration Program\n",
-      "2     6    2022-12-18  Atlantic Immigration Program\n",
-      "3     4    2023-01-18  Atlantic Immigration Program\n",
-      "4     4    2023-02-18  Atlantic Immigration Program\n",
-      "5     4    2023-03-18  Atlantic Immigration Program\n",
-      "6     4    2023-04-18  Atlantic Immigration Program\n",
-      "7     5    2023-05-02  Atlantic Immigration Program\n",
-      "8     5    2023-05-02  Atlantic Immigration Program\n",
-      "9     5    2023-05-10  Atlantic Immigration Program\n",
-      "   time date_recorded                         category\n",
-      "0    48    2022-10-18  Self-employed persons (Federal)\n",
-      "1    60    2022-11-18  Self-employed persons (Federal)\n",
-      "2    64    2022-12-18  Self-employed persons (Federal)\n",
-      "3    85    2023-01-18  Self-employed persons (Federal)\n",
-      "4    24    2023-02-18  Self-employed persons (Federal)\n",
-      "5    58    2023-03-18  Self-employed persons (Federal)\n",
-      "6    44    2023-04-18  Self-employed persons (Federal)\n",
-      "7    46    2023-05-02  Self-employed persons (Federal)\n",
-      "8    46    2023-05-02  Self-employed persons (Federal)\n",
-      "9    46    2023-05-10  Self-employed persons (Federal)\n",
-      "   time date_recorded       category\n",
-      "0    30    2022-10-18  Start-up visa\n",
-      "1    41    2022-11-18  Start-up visa\n",
-      "2    42    2022-12-18  Start-up visa\n",
-      "3    44    2023-01-18  Start-up visa\n",
-      "4    45    2023-02-18  Start-up visa\n",
-      "5    34    2023-03-18  Start-up visa\n",
-      "6    35    2023-04-18  Start-up visa\n",
-      "7    36    2023-05-02  Start-up visa\n",
-      "8    36    2023-05-02  Start-up visa\n",
-      "9    35    2023-05-10  Start-up visa\n",
+      "    time date_recorded                  category\n",
+      "0     22    2022-10-18  Skilled workers (Quebec)\n",
+      "1     23    2022-11-18  Skilled workers (Quebec)\n",
+      "2     22    2022-12-18  Skilled workers (Quebec)\n",
+      "3     21    2023-01-18  Skilled workers (Quebec)\n",
+      "4     22    2023-02-18  Skilled workers (Quebec)\n",
+      "5     21    2023-03-18  Skilled workers (Quebec)\n",
+      "6     20    2023-04-18  Skilled workers (Quebec)\n",
+      "7     21    2023-05-02  Skilled workers (Quebec)\n",
+      "8     21    2023-05-02  Skilled workers (Quebec)\n",
+      "9     21    2023-05-10  Skilled workers (Quebec)\n",
+      "10    21    2023-05-16  Skilled workers (Quebec)\n",
+      "11    21    2023-05-16  Skilled workers (Quebec)\n",
+      "    time date_recorded               category\n",
+      "0     67    2022-10-18  Quebec Business Class\n",
+      "1     65    2022-11-18  Quebec Business Class\n",
+      "2     68    2022-12-18  Quebec Business Class\n",
+      "3     64    2023-01-18  Quebec Business Class\n",
+      "4     64    2023-02-18  Quebec Business Class\n",
+      "5     65    2023-03-18  Quebec Business Class\n",
+      "6     67    2023-04-18  Quebec Business Class\n",
+      "7     68    2023-05-02  Quebec Business Class\n",
+      "8     68    2023-05-02  Quebec Business Class\n",
+      "9     68    2023-05-10  Quebec Business Class\n",
+      "10    68    2023-05-16  Quebec Business Class\n",
+      "11    68    2023-05-16  Quebec Business Class\n",
+      "    time date_recorded                   category\n",
+      "0     22    2022-10-18  Skilled workers (Federal)\n",
+      "1     24    2022-11-18  Skilled workers (Federal)\n",
+      "2     25    2022-12-18  Skilled workers (Federal)\n",
+      "3     24    2023-01-18  Skilled workers (Federal)\n",
+      "4     23    2023-02-18  Skilled workers (Federal)\n",
+      "5     22    2023-03-18  Skilled workers (Federal)\n",
+      "6     27    2023-04-18  Skilled workers (Federal)\n",
+      "7     26    2023-05-02  Skilled workers (Federal)\n",
+      "8     26    2023-05-02  Skilled workers (Federal)\n",
+      "9     26    2023-05-10  Skilled workers (Federal)\n",
+      "10    26    2023-05-16  Skilled workers (Federal)\n",
+      "11    26    2023-05-16  Skilled workers (Federal)\n",
+      "    time date_recorded                      category\n",
+      "0      8    2022-10-18  Atlantic Immigration Program\n",
+      "1      6    2022-11-18  Atlantic Immigration Program\n",
+      "2      6    2022-12-18  Atlantic Immigration Program\n",
+      "3      4    2023-01-18  Atlantic Immigration Program\n",
+      "4      4    2023-02-18  Atlantic Immigration Program\n",
+      "5      4    2023-03-18  Atlantic Immigration Program\n",
+      "6      4    2023-04-18  Atlantic Immigration Program\n",
+      "7      5    2023-05-02  Atlantic Immigration Program\n",
+      "8      5    2023-05-02  Atlantic Immigration Program\n",
+      "9      5    2023-05-10  Atlantic Immigration Program\n",
+      "10     5    2023-05-16  Atlantic Immigration Program\n",
+      "11     5    2023-05-16  Atlantic Immigration Program\n",
+      "    time date_recorded                         category\n",
+      "0     48    2022-10-18  Self-employed persons (Federal)\n",
+      "1     60    2022-11-18  Self-employed persons (Federal)\n",
+      "2     64    2022-12-18  Self-employed persons (Federal)\n",
+      "3     85    2023-01-18  Self-employed persons (Federal)\n",
+      "4     24    2023-02-18  Self-employed persons (Federal)\n",
+      "5     58    2023-03-18  Self-employed persons (Federal)\n",
+      "6     44    2023-04-18  Self-employed persons (Federal)\n",
+      "7     46    2023-05-02  Self-employed persons (Federal)\n",
+      "8     46    2023-05-02  Self-employed persons (Federal)\n",
+      "9     46    2023-05-10  Self-employed persons (Federal)\n",
+      "10    46    2023-05-16  Self-employed persons (Federal)\n",
+      "11    46    2023-05-16  Self-employed persons (Federal)\n",
+      "    time date_recorded       category\n",
+      "0     30    2022-10-18  Start-up visa\n",
+      "1     41    2022-11-18  Start-up visa\n",
+      "2     42    2022-12-18  Start-up visa\n",
+      "3     44    2023-01-18  Start-up visa\n",
+      "4     45    2023-02-18  Start-up visa\n",
+      "5     34    2023-03-18  Start-up visa\n",
+      "6     35    2023-04-18  Start-up visa\n",
+      "7     36    2023-05-02  Start-up visa\n",
+      "8     36    2023-05-02  Start-up visa\n",
+      "9     35    2023-05-10  Start-up visa\n",
+      "10    35    2023-05-16  Start-up visa\n",
+      "11    35    2023-05-16  Start-up visa\n",
       "   time date_recorded                  category\n",
       "0    39    2022-10-18  Skilled trades (Federal)\n",
       "1    38    2022-11-18  Skilled trades (Federal)\n",
@@ -147,17 +159,19 @@
       "3    39    2023-01-18  Skilled trades (Federal)\n",
       "4    40    2023-02-18  Skilled trades (Federal)\n",
       "5    48    2023-03-18  Skilled trades (Federal)\n",
-      "   time date_recorded                   category\n",
-      "0     4    2022-10-18  Canadian Experience Class\n",
-      "1     5    2022-11-18  Canadian Experience Class\n",
-      "2     5    2022-12-18  Canadian Experience Class\n",
-      "3     8    2023-01-18  Canadian Experience Class\n",
-      "4     4    2023-02-18  Canadian Experience Class\n",
-      "5     5    2023-03-18  Canadian Experience Class\n",
-      "6     5    2023-04-18  Canadian Experience Class\n",
-      "7     4    2023-05-02  Canadian Experience Class\n",
-      "8     4    2023-05-02  Canadian Experience Class\n",
-      "9     4    2023-05-10  Canadian Experience Class\n"
+      "    time date_recorded                   category\n",
+      "0      4    2022-10-18  Canadian Experience Class\n",
+      "1      5    2022-11-18  Canadian Experience Class\n",
+      "2      5    2022-12-18  Canadian Experience Class\n",
+      "3      8    2023-01-18  Canadian Experience Class\n",
+      "4      4    2023-02-18  Canadian Experience Class\n",
+      "5      5    2023-03-18  Canadian Experience Class\n",
+      "6      5    2023-04-18  Canadian Experience Class\n",
+      "7      4    2023-05-02  Canadian Experience Class\n",
+      "8      4    2023-05-02  Canadian Experience Class\n",
+      "9      4    2023-05-10  Canadian Experience Class\n",
+      "10     4    2023-05-16  Canadian Experience Class\n",
+      "11     4    2023-05-16  Canadian Experience Class\n"
      ]
     }
    ],
@@ -379,34 +393,64 @@
        "      <td>NaN</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>21</td>\n",
+       "      <td>2023-05-16</td>\n",
+       "      <td>21</td>\n",
+       "      <td>68</td>\n",
+       "      <td>26</td>\n",
+       "      <td>5</td>\n",
+       "      <td>46</td>\n",
+       "      <td>35</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>21</td>\n",
+       "      <td>2023-05-16</td>\n",
+       "      <td>21</td>\n",
+       "      <td>68</td>\n",
+       "      <td>26</td>\n",
+       "      <td>5</td>\n",
+       "      <td>46</td>\n",
+       "      <td>35</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Skilled workers (Quebec) date_recorded  qc_skilled  qc_business  \\\n",
-       "0                        22    2022-10-18          22           67   \n",
-       "1                        23    2022-11-18          23           65   \n",
-       "2                        22    2022-12-18          22           68   \n",
-       "3                        21    2023-01-18          21           64   \n",
-       "4                        22    2023-02-18          22           64   \n",
-       "5                        21    2023-03-18          21           65   \n",
-       "6                        20    2023-04-18          20           67   \n",
-       "7                        21    2023-05-02          21           68   \n",
-       "8                        21    2023-05-02          21           68   \n",
-       "9                        21    2023-05-10          21           68   \n",
+       "    Skilled workers (Quebec) date_recorded  qc_skilled  qc_business  \\\n",
+       "0                         22    2022-10-18          22           67   \n",
+       "1                         23    2022-11-18          23           65   \n",
+       "2                         22    2022-12-18          22           68   \n",
+       "3                         21    2023-01-18          21           64   \n",
+       "4                         22    2023-02-18          22           64   \n",
+       "5                         21    2023-03-18          21           65   \n",
+       "6                         20    2023-04-18          20           67   \n",
+       "7                         21    2023-05-02          21           68   \n",
+       "8                         21    2023-05-02          21           68   \n",
+       "9                         21    2023-05-10          21           68   \n",
+       "10                        21    2023-05-16          21           68   \n",
+       "11                        21    2023-05-16          21           68   \n",
        "\n",
-       "   skilled_fed  atlantic  self_employed  startup  trades  can_exp  \n",
-       "0           22         8             48       30    39.0        4  \n",
-       "1           24         6             60       41    38.0        5  \n",
-       "2           25         6             64       42    38.0        5  \n",
-       "3           24         4             85       44    39.0        8  \n",
-       "4           23         4             24       45    40.0        4  \n",
-       "5           22         4             58       34    48.0        5  \n",
-       "6           27         4             44       35     NaN        5  \n",
-       "7           26         5             46       36     NaN        4  \n",
-       "8           26         5             46       36     NaN        4  \n",
-       "9           26         5             46       35     NaN        4  "
+       "    skilled_fed  atlantic  self_employed  startup  trades  can_exp  \n",
+       "0            22         8             48       30    39.0        4  \n",
+       "1            24         6             60       41    38.0        5  \n",
+       "2            25         6             64       42    38.0        5  \n",
+       "3            24         4             85       44    39.0        8  \n",
+       "4            23         4             24       45    40.0        4  \n",
+       "5            22         4             58       34    48.0        5  \n",
+       "6            27         4             44       35     NaN        5  \n",
+       "7            26         5             46       36     NaN        4  \n",
+       "8            26         5             46       36     NaN        4  \n",
+       "9            26         5             46       35     NaN        4  \n",
+       "10           26         5             46       35     NaN        4  \n",
+       "11           26         5             46       35     NaN        4  "
       ]
      },
      "execution_count": 17,
